--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
     <link href='src/assets/fonts/SGKara-Regular.ttf' rel="stylesheet">
   </head>
-  <body>
+  <body class="font-MyFont">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
