[#26-UPDATE] review setting

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kheradkhan</title>
-    <link href='src/assets/fonts/SGKara-Regular.ttf' rel="stylesheet">
+    <link href='public/SGKara-Regular.ttf' rel="stylesheet">
   </head>
   <body class="font-MyFont">
     <div id="root"></div>
